--- a/WeatherGuru/WeatherGuru.Droid/Resources/layout/Main.axml
+++ b/WeatherGuru/WeatherGuru.Droid/Resources/layout/Main.axml
@@ -18,11 +18,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/ZipCodeSearchLabel"
             android:layout_centerVertical="true"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:textColor="@android:color/white"
             android:textStyle="bold" />
         <TextView
-            android:text="Zip Code"
+            android:text=""
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/ZipCodeSearchLabel"
@@ -56,7 +57,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/locationLabel"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:visibility="invisible" />
     <TextView
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
@@ -70,6 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tempLabel"
+        android:visibility="invisible"
         android:layout_marginLeft="10dp" />
     <TextView
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -84,6 +87,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/windLabel"
+        android:visibility="invisible"
         android:layout_marginLeft="10dp" />
     <TextView
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -98,6 +102,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/humidtyLabel"
+        android:visibility="invisible"
         android:layout_marginLeft="10dp" />
     <TextView
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -112,6 +117,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/visibilityLabel"
+        android:visibility="invisible"
         android:layout_marginLeft="10dp" />
     <TextView
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -126,6 +132,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/sunriseLabel"
+        android:visibility="invisible"
         android:layout_marginLeft="10dp" />
     <TextView
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -140,6 +147,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/sunsetLabel"
+        android:visibility="invisible"
         android:layout_marginLeft="10dp" />
     <TextView
         android:textAppearance="?android:attr/textAppearanceMedium"
